MODFEE-352: Remove PubSub support, switch to Kafka
- Remove mod-pubsub-client dependency from pom.xml
- Delete MessagingDescriptor.json
- Delete PubSubRegistrationService, FeeFinePubSubClient, EventPublisher
- Rewrite AccountEventPublisher and LogEventPublisher to use KafkaEventProducer
- Update TenantRefAPI to remove PubSub module registration
- Remove pubsub requires/permissions from ModuleDescriptor-template.json
- Add Kafka consumer support to KafkaTestHelper for test verification
- Update ApiTests to start KafkaTestHelper before verticle deployment
- Remove PubSub wiremock stubs from OkapiDeployment
- Rewrite LogEventUtils to consume from Kafka topics instead of WireMock
- Update all integration tests to verify events via Kafka
- Remove PubSub-specific tests (no-subscribers, pubsub-failure)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>